full-moon/tests/cases/fail/tokenizer/unexpected-character/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/tokenizer/unexpected-character
---
error[ast]: expected an expression
  ┌─ source.lua:1:9
  │
1 │ local x = 🤔
  │         ^

error[tokenizer]: unexpected character 🤔 (1:11 to 1:12)
  ┌─ source.lua:1:11
  │
1 │ local x = 🤔
  │           ^^


